--- a/vtdi_gatelog_a/App.config
+++ b/vtdi_gatelog_a/App.config
@@ -8,8 +8,13 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="vtdi_gate_log_dbEntities" connectionString="metadata=res://*/GateLogModel.csdl|res://*/GateLogModel.ssdl|res://*/GateLogModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=vtdi_gate_log_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="vtdi_gate_log_dbEntities1" connectionString="metadata=res://*/vtdi_gate_log.csdl|res://*/vtdi_gate_log.ssdl|res://*/vtdi_gate_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=vtdi_gate_log_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="vtdi_gate_log_dbEntities" connectionString="metadata=res://*/GateLogModel.csdl|res://*/GateLogModel.ssdl|res://*/GateLogModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=vtdi_gate_log_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="vtdi_gate_log_dbEntities1" connectionString="metadata=res://*/vtdi_gate_log.csdl|res://*/vtdi_gate_log.ssdl|res://*/vtdi_gate_log.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=vtdi_gate_log_db;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="vtdi_gatelog_a.Properties.Settings.vtdi_gate_log_dbConnectionString"
+      connectionString="Data Source=(localdb)\mssqllocaldb;Initial Catalog=vtdi_gate_log_db;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
