added usermanagement form and databound the combobox for genders and a gridview for all users.

--- a/vtdi_gatelog_a/vtdi_gatelog_a.csproj
+++ b/vtdi_gatelog_a/vtdi_gatelog_a.csproj
@@ -92,6 +92,12 @@
     <Compile Include="User.cs">
       <DependentUpon>vtdi_gate_log.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserManagement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserManagement.Designer.cs">
+      <DependentUpon>UserManagement.cs</DependentUpon>
+    </Compile>
     <Compile Include="VehicleType.cs">
       <DependentUpon>vtdi_gate_log.tt</DependentUpon>
     </Compile>
@@ -134,6 +140,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserManagement.resx">
+      <DependentUpon>UserManagement.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\PurposeOfVisit.datasource" />
     <None Include="Properties\DataSources\User.datasource" />
